// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/modal/ForgottenPasswordModal happy path 1`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="forgottenPasswordModal"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Reset Password
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div
        class="container-fluid"
      >
        <p>
          Enter your email address to reset your password.
        </p>
        <form>
          <div
            class="form-group"
          >
            <label
              for="loginEmail"
            >
              Email address
            </label>
            <input
              class="form-control"
              id="loginEmail"
              placeholder="Email address"
              type="email"
              value=""
            />
          </div>
          <button
            class="btn btn-default"
            type="submit"
          >
            Submit
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/ForgottenPasswordModal happy path 2`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="forgottenPasswordModal"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Reset Password
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div
        class="container-fluid"
      >
        <p>
          Enter your email address to reset your password.
        </p>
        <form>
          <div
            class="form-group"
          >
            <label
              for="loginEmail"
            >
              Email address
            </label>
            <input
              class="form-control"
              id="loginEmail"
              placeholder="Email address"
              type="email"
              value=""
            />
          </div>
          <button
            class="btn btn-default"
            type="submit"
          >
            Submit
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/ForgottenPasswordModal happy path 3`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="forgottenPasswordModal"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Reset Password
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div
        class="container-fluid"
      >
        <p>
          Enter your email address to reset your password.
        </p>
        <form>
          <div
            class="form-group"
          >
            <label
              for="loginEmail"
            >
              Email address
            </label>
            <input
              class="form-control"
              id="loginEmail"
              placeholder="Email address"
              type="email"
              value=""
            />
          </div>
          <button
            class="btn btn-default"
            type="submit"
          >
            Submit
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/ForgottenPasswordModal renders error 1`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="forgottenPasswordModal"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Reset Password
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div
        class="container-fluid"
      >
        <p>
          Enter your email address to reset your password.
        </p>
        <form>
          <div
            class="alert alert-warning alert-dismissible"
            role="alert"
          >
            <button
              aria-label="Close"
              class="close"
              type="button"
            >
              <span
                aria-hidden="true"
              >
                ×
              </span>
            </button>
            Error message
          </div>
          <div
            class="form-group"
          >
            <label
              for="loginEmail"
            >
              Email address
            </label>
            <input
              class="form-control"
              id="loginEmail"
              placeholder="Email address"
              type="email"
              value=""
            />
          </div>
          <button
            class="btn btn-default"
            type="submit"
          >
            Submit
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/ForgottenPasswordModal renders loading 1`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="forgottenPasswordModal"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Reset Password
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div
        class="container-fluid"
      >
        <p>
          Enter your email address to reset your password.
        </p>
        <div>
          Loading
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`components/modal/ForgottenPasswordModal reset error 1`] = `
<div
  class="Modal__Bootstrap modal-dialog modal-lg"
  data-testid="forgottenPasswordModal"
>
  <div
    class="modal-content"
  >
    <div
      class="modal-header"
    >
      <button
        aria-label="Close"
        class="close"
        type="button"
      >
        <span
          class="glyphicon glyphicon-remove"
        />
      </button>
      <h4
        class="modal-title"
      >
        Reset Password
      </h4>
    </div>
    <div
      class="modal-body"
      style="max-height: 55vh; overflow-y: auto;"
    >
      <div
        class="container-fluid"
      >
        <p>
          Enter your email address to reset your password.
        </p>
        <form>
          <div
            class="form-group"
          >
            <label
              for="loginEmail"
            >
              Email address
            </label>
            <input
              class="form-control"
              id="loginEmail"
              placeholder="Email address"
              type="email"
              value=""
            />
          </div>
          <button
            class="btn btn-default"
            type="submit"
          >
            Submit
          </button>
        </form>
      </div>
    </div>
  </div>
</div>
`;
